changed the mail on home page

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -288,7 +288,7 @@
                 </div>
                 <div class="custom-footer-section">
                     <h3>Contact</h3>
-                    <p>Email: theangaarbatch@gmail.com</p>
+                    <p>Email: team@theangaarbatch.in</p>
 
                     <p>Phone: +918273619318</p>
                 </div>
