--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -254,18 +254,18 @@ The Angaari Aawam 🔥
         </section>
 
         <!--=============================== Contributors Section ===============================-->
-        <section class="hierarchical-container" data-aos="fade-up">
+        <!-- <section class="hierarchical-container" data-aos="fade-up">
             <div id="open-contributors-btn" class="role-heading">
                 <h3>Contributors</h3>
             </div>
-        </section>
+        </section> -->
 
         <!--=============================== Campus Ambassadors Section ===============================-->
-        <section class="hierarchical-container d-none" data-aos="fade-up">
+        <!-- <section class="hierarchical-container d-none" data-aos="fade-up">
             <div id="open-ambassadors-btn" class="role-heading">
                 <h3>Campus Ambassadors</h3>
             </div>
-        </section>
+        </section> -->
 
         
     </div>
